# RC_Vision

./: LICENSE  README.md  build.sh
core_lib/: CMakeLists.txt  Config.cmake.in
core_lib/examples/: CMakeLists.txt  example_camera.cpp  example_edge_detector.cpp  example_filters.cpp  example_image.cpp  example_logger.cpp  example_math_utils.cpp  example_point_cloud.cpp
core_lib/include/rc_vision/core/: camera.hpp  config.hpp  edge_detector.hpp  filters.hpp  image.hpp  logger.hpp  math_utils.hpp  point_cloud.hpp
core_lib/src/core/: camera.cpp  config.cpp  edge_detector.cpp  filters.cpp  image.cpp  logger.cpp  math_utils.cpp  point_cloud.cpp
core_lib/tests/unit_tests/: CMakeLists.txt  test_camera.cpp  test_edge_detector.cpp  test_filters.cpp  test_image.cpp  test_logger.cpp  test_math_utils.cpp  test_point_cloud.cpp  test_stereo_camera.cpp
core_lib/utils/: CMakeLists.txt  HSV_adjust.py  camera_calibration.cpp  generate_camera_params.cpp  rotation.py  stereo_camera_calibration.cpp
docs/: Doxyfile
docs/html/: annotated.html  camera_8hpp.html  camera_8hpp__incl.dot  camera_8hpp_source.html  classes.html  classrc__vision_1_1core_1_1_camera-members.html  classrc__vision_1_1core_1_1_camera.html  classrc__vision_1_1core_1_1_config-members.html  classrc__vision_1_1core_1_1_config.html  classrc__vision_1_1core_1_1_edge_detector-members.html  classrc__vision_1_1core_1_1_edge_detector.html  classrc__vision_1_1core_1_1_image-members.html  classrc__vision_1_1core_1_1_image.html  classrc__vision_1_1core_1_1_logger-members.html  classrc__vision_1_1core_1_1_logger.html  classrc__vision_1_1core_1_1_point_cloud-members.html  classrc__vision_1_1core_1_1_point_cloud.html  classrc__vision_1_1core_1_1_stereo_camera-members.html  classrc__vision_1_1core_1_1_stereo_camera.html  classrc__vision_1_1core_1_1_stereo_camera__coll__graph.dot  classrc__vision_1_1core_1_1filters_1_1_e_k_f-members.html  classrc__vision_1_1core_1_1filters_1_1_e_k_f.html  classrc__vision_1_1core_1_1filters_1_1_e_k_f__inherit__graph.dot  classrc__vision_1_1core_1_1filters_1_1_kalman_filter-members.html  classrc__vision_1_1core_1_1filters_1_1_kalman_filter.html  classrc__vision_1_1core_1_1filters_1_1_kalman_filter__inherit__graph.dot  classrc__vision_1_1core_1_1filters_1_1_moving_average_filter-members.html  classrc__vision_1_1core_1_1filters_1_1_moving_average_filter.html  classrc__vision_1_1core_1_1filters_1_1_particle_filter-members.html  classrc__vision_1_1core_1_1filters_1_1_particle_filter.html  classrc__vision_1_1core_1_1filters_1_1_u_k_f-members.html  classrc__vision_1_1core_1_1filters_1_1_u_k_f.html  classrc__vision_1_1core_1_1filters_1_1_u_k_f__inherit__graph.dot  config_8hpp.html  config_8hpp__incl.dot  config_8hpp_source.html  dir_6b71f9c233d9519f4af35a38b852209b.html  dir_8027d5a996a7752b55704260e4cc0697.html  dir_91bce8cc46c2d1a1c49b6c892b066b0d.html  dir_cd238af50b2a6e1d947d51424d846599.html  (+83 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+50 more)
docs/latex/: annotated.tex  camera_8hpp.tex  camera_8hpp.tex.tmp  camera_8hpp__incl.dot  camera_8hpp_source.tex  classrc__vision_1_1core_1_1_camera.tex  classrc__vision_1_1core_1_1_config.tex  classrc__vision_1_1core_1_1_edge_detector.tex  classrc__vision_1_1core_1_1_image.tex  classrc__vision_1_1core_1_1_logger.tex  classrc__vision_1_1core_1_1_point_cloud.tex  classrc__vision_1_1core_1_1_stereo_camera.tex  classrc__vision_1_1core_1_1_stereo_camera__coll__graph.dot  classrc__vision_1_1core_1_1filters_1_1_e_k_f.tex  classrc__vision_1_1core_1_1filters_1_1_e_k_f__inherit__graph.dot  classrc__vision_1_1core_1_1filters_1_1_kalman_filter.tex  classrc__vision_1_1core_1_1filters_1_1_kalman_filter__inherit__graph.dot  classrc__vision_1_1core_1_1filters_1_1_moving_average_filter.tex  classrc__vision_1_1core_1_1filters_1_1_particle_filter.tex  classrc__vision_1_1core_1_1filters_1_1_u_k_f.tex  classrc__vision_1_1core_1_1filters_1_1_u_k_f__inherit__graph.dot  config_8hpp.tex  config_8hpp__incl.dot  config_8hpp_source.tex  dir_6b71f9c233d9519f4af35a38b852209b.tex  dir_8027d5a996a7752b55704260e4cc0697.tex  dir_8027d5a996a7752b55704260e4cc0697_dep.dot  dir_91bce8cc46c2d1a1c49b6c892b066b0d.tex  dir_91bce8cc46c2d1a1c49b6c892b066b0d_dep.dot  dir_cd238af50b2a6e1d947d51424d846599.tex  dir_cd238af50b2a6e1d947d51424d846599_dep.dot  edge__detector_8hpp.tex  edge__detector_8hpp__incl.dot  edge__detector_8hpp_source.tex  files.tex  filters_8hpp.tex  filters_8hpp__incl.dot  filters_8hpp_source.tex  hierarchy.tex  image_8hpp.tex  (+21 more)
python_bindings/: CMakeLists.txt  setup.py
python_bindings/src/: pybind_module.cpp
ros1/: README.md
ros2/: README.md
